--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <ul class="game-list">
                 <li><a target="_blank"
                     href="https://www.twitch.tv/search?term=lol">
-                    <img src="/src/assets/games/game-1.png"
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.VGuZULEieALmdRgO5DQC5wHaDf&pid=Api&P=0"
                      alt="Lol"></a> </li>
                 <li><a target="_blank"
                     href="https://www.twitch.tv/search?term=cs%20go">
-                    <img src="/src/assets/games/game-3.png"
+                    <img src="https://tse1.mm.bing.net/th?id=OIP.ED2SnY-zSMQzJGRz9U9LBgHaKT&pid=Api&P=0"
                     alt="cs-go"> </a> </li>
                 <li><a target="_blank"
                     href="https://www.twitch.tv/directory/game/World%20of%20Warcraft">
-                    <img src="/src/assets/games/game-6.png"
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.p-iNuP0xcT6_JKkpPwl7rQHaKS&pid=Api&P=0"
                      alt="world of warcraft"></a></li>
             </ul>
             </div>
