--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div>
         <img 
-        src="https://scontent.fcgh7-1.fna.fbcdn.net/v/t39.30808-6/299232508_5465277256851422_3682300505552317253_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeG4S1XkZY2iN3pGzGXtH57LGLr5cQBjLrcYuvlxAGMut_S_Pi3JCkyfGdwgCNDZw-7oqT8ZotpyF61gNSb1AZS0&_nc_ohc=mV_fNStY3gEAX9jhOsQ&tn=l3HB3AYTh_Qhq1qj&_nc_ht=scontent.fcgh7-1.fna&oh=00_AT9lbTe5sI2H9eZQMNX8-FtvSneLLczlEW7mLZmygbCRjg&oe=6324DD2B"
+        src="https://media-exp1.licdn.com/dms/image/C4D03AQGPdERafEDlDg/profile-displayphoto-shrink_100_100/0/1663227251341?e=1669248000&v=beta&t=8S1PD-zX0BUZ11ZVWtpwEuW2FlJPuggz6w6102SgWuw"https://media-exp1.licdn.com/dms/image/C4D03AQGPdERafEDlDg/profile-displayphoto-shrink_100_100/0/1663227251341?e=1669248000&v=beta&t=8S1PD-zX0BUZ11ZVWtpwEuW2FlJPuggz6w6102SgWuw
         alt="O johnata">
         </div>
     </header>
