--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div>
         <img 
-        src="https://media-exp1.licdn.com/dms/image/C4D03AQGPdERafEDlDg/profile-displayphoto-shrink_100_100/0/1663227251341?e=1669248000&v=beta&t=8S1PD-zX0BUZ11ZVWtpwEuW2FlJPuggz6w6102SgWuw"https://media-exp1.licdn.com/dms/image/C4D03AQGPdERafEDlDg/profile-displayphoto-shrink_100_100/0/1663227251341?e=1669248000&v=beta&t=8S1PD-zX0BUZ11ZVWtpwEuW2FlJPuggz6w6102SgWuw
+        src="https://media-exp1.licdn.com/dms/image/C4D03AQGPdERafEDlDg/profile-displayphoto-shrink_100_100/0/1663227251341?e=1669248000&v=beta&t=8S1PD-zX0BUZ11ZVWtpwEuW2FlJPuggz6w6102SgWuw"
         alt="O johnata">
         </div>
     </header>
